--- a/css/main.css
+++ b/css/main.css
@@ -415,6 +415,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   fill: #757575;
+  color: #757575;
   -webkit-transition-property: color, fill;
   transition-property: color, fill;
   -webkit-transition-duration: 250ms;
@@ -619,13 +620,48 @@ img {
 }
 
 .overlay {
-  width: 100%;
+  max-width: 450px;
   margin-left: auto;
   margin-right: auto;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 58, 52, 0.4)), to(rgba(47, 58, 52, 0.4)));
-  background-image: linear-gradient(to right, rgba(47, 58, 52, 0.4), rgba(47, 58, 52, 0.4));
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 58, 52, 0.4)), to(rgba(47, 58, 52, 0.4))), url(../images/overlay-mobile.jpg);
+  background-image: linear-gradient(to right, rgba(47, 58, 52, 0.4), rgba(47, 58, 52, 0.4)), url(../images/overlay-mobile.jpg);
 }
 
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .overlay {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 58, 52, 0.4)), to(rgba(47, 58, 52, 0.4))), url(../images/overlay-mobile@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 58, 52, 0.4), rgba(47, 58, 52, 0.4)), url(../images/overlay-mobile@2x.jpg);
+    background-size: cover;
+  }
+}
+@media screen and (min-width: 768px) {
+  .overlay {
+    max-width: 768px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 58, 52, 0.4)), to(rgba(47, 58, 52, 0.4))), url(../images/overlay-tablet.jpg);
+    background-image: linear-gradient(to right, rgba(47, 58, 52, 0.4), rgba(47, 58, 52, 0.4)), url(../images/overlay-tablet.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .overlay {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 58, 52, 0.4)), to(rgba(47, 58, 52, 0.4))), url(../images/overlay-tablet@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 58, 52, 0.4), rgba(47, 58, 52, 0.4)), url(../images/overlay-tablet@2x.jpg);
+    background-size: cover;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .overlay {
+    max-width: 1600px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 58, 52, 0.4)), to(rgba(47, 58, 52, 0.4))), url(../images/overlay-desktop.jpg);
+    background-image: linear-gradient(to right, rgba(47, 58, 52, 0.4), rgba(47, 58, 52, 0.4)), url(../images/overlay-desktop.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .overlay {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 58, 52, 0.4)), to(rgba(47, 58, 52, 0.4))), url(../images/overlay-desktop@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 58, 52, 0.4), rgba(47, 58, 52, 0.4)), url(../images/overlay-desktop@2x.jpg);
+    background-size: cover;
+  }
+}
 .hero__title {
   margin-bottom: 30px;
   margin-top: 0px;
