--- a/sass/layout/_partners.scss
+++ b/sass/layout/_partners.scss
@@ -1,4 +1,8 @@
 .partners {
+  @media screen and (max-width: 479px) {
+    display: block;
+    padding: 15px;
+  }
   display: flex;
   flex-wrap: wrap;
   padding: 0;
@@ -8,8 +12,16 @@
   }
 }
 .partners__item {
-  width: calc((100% - 2 *#{$featuresSetGap}) / 2);
-  margin: 15px;
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+  }
+  @media screen and (min-width: 480px) {
+    width: calc((100% - 2 *#{$featuresSetGap}) / 2);
+    margin: 15px;
+  }
   @media screen and (min-width: 768px) {
     width: calc((100% - 3 *#{$featuresSetGap}) / 3);
   }
