goit-markup-hw-08-V6

--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -18,6 +18,9 @@
     margin: 15px;
   }
 }
+.command__img {
+  width: 275px;
+}
 .command__content {
   padding-top: 30px;
   padding-bottom: 24px;
