--- a/css/main.css
+++ b/css/main.css
@@ -1424,10 +1424,13 @@ img {
   }
 }
 
-.command__img {
-  width: 275px;
+@media screen and (min-width: 1200px) {
+  .command__img {
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0px;
+  }
 }
-
 .command__content {
   padding-top: 30px;
   padding-bottom: 24px;
