--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -18,8 +18,11 @@
     margin: 15px;
   }
 }
-.command__img {
-  width: 275px;
+@media screen and (min-width: 1200px) {
+  .command__img {
+    box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 0px;
+  }
 }
 .command__content {
   padding-top: 30px;
