--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -7,6 +7,9 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: $cardsBorderRadius;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
   @media screen and (min-width: 768px) {
     // flex-basis: calc((100% - 2 *#{$featuresSetGap}) / 2);
     width: calc((100% - 2 *#{$featuresSetGap}) / 2);
