--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -8,7 +8,9 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: $cardsBorderRadius;
   @media screen and (max-width: 767px) {
-    margin-bottom: 30px;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
   @media screen and (min-width: 768px) {
     // flex-basis: calc((100% - 2 *#{$featuresSetGap}) / 2);
