--- a/css/main.css
+++ b/css/main.css
@@ -481,8 +481,6 @@ img {
   padding: 48px 40px;
   background-color: #ffffff;
   z-index: 999;
-  overflow-y: scroll;
-  overflow-x: scroll;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition-property: -webkit-transform;
@@ -1245,6 +1243,23 @@ img {
   padding: 0;
   margin-bottom: 50px;
   list-style: none;
+}
+@media screen and (max-width: 767px) {
+  .button__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: -4px;
+    margin-left: -4px;
+  }
+  .button__list .button__item {
+    margin: 8px;
+  }
 }
 
 .button__item:not(:last-child) {
