--- a/css/main.css
+++ b/css/main.css
@@ -1050,12 +1050,18 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin: -15px;
+}
+@media screen and (max-width: 767px) {
+  .card__list {
+    margin: 0;
+  }
 }
 
 .card__thumb {
   position: relative;
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   -webkit-perspective: 600px;
           perspective: 600px;
@@ -1093,17 +1099,32 @@ img {
   letter-spacing: 0.03em;
 }
 
-.card__item {
-  -ms-flex-preferred-size: 370px;
-      flex-basis: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+@media screen and (max-width: 768px) {
+  .card__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
-.card__item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .card__item {
+    width: calc((100% - 2 *30px) / 2);
+    margin: 15px;
+  }
+  .card__item:last-child {
+    margin-bottom: 0;
+  }
 }
-.card__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .card__item {
+    width: calc((100% - 3 *30px) / 3);
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+  .card__item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .card__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
 }
 
 .card__link {
@@ -1128,7 +1149,7 @@ img {
 }
 
 .card__content {
-  width: 370px;
+  width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
