--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,11 +1,15 @@
 .card__list {
   display: flex;
   flex-wrap: wrap;
+  margin: -15px;
+  @media screen and (max-width: 767px) {
+    margin: 0;
+  }
 }
 .card__thumb {
   position: relative;
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   perspective: 600px;
 }
@@ -36,14 +40,29 @@
 }
 
 .card__item {
-  flex-basis: calc((1170px - (2 * $featuresSetGap)) / 3);
-  margin-right: $featuresSetGap;
-  margin-bottom: $featuresSetGap;
-  &:nth-child(3n) {
-    margin-right: 0;
+  @media screen and (max-width: 768px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 2 *#{$featuresSetGap}) / 2);
+    margin: 15px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 3 *#{$featuresSetGap}) / 3);
+    margin-right: 15px;
+    margin-bottom: 15px;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -66,7 +85,7 @@
   }
 }
 .card__content {
-  width: 370px;
+  width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
