--- a/css/main.css
+++ b/css/main.css
@@ -686,6 +686,11 @@ img {
   padding-right: 24px;
 }
 
+.backdrop__hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -693,9 +698,9 @@ img {
   width: 100%;
   height: 100%;
   padding: 94px 15px;
-  opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 2;
+  opacity: 1;
   -webkit-transition-property: opacity;
   transition-property: opacity;
   -webkit-transition-duration: 250ms;
@@ -710,71 +715,42 @@ img {
   }
 }
 
-.backdrop__hidden {
-  opacity: 0;
-  pointer-events: none;
+.backdrop.backdrop__hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
 }
 
 .modal {
   width: 100%;
-  height: 609px;
+  max-width: 450px;
+  min-height: 609px;
   background-color: #ffffff;
-}
-@media screen and (max-width: 768px) {
-  .modal {
-    opacity: 1;
-    -webkit-transition-property: -webkit-transform;
-    transition-property: -webkit-transform;
-    transition-property: transform;
-    transition-property: transform, -webkit-transform;
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-@media screen and (min-width: 767px) {
-  .modal {
-    width: 100%;
-    max-width: 450px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
-    -webkit-transition-property: -webkit-transform;
-    transition-property: -webkit-transform;
-    transition-property: transform;
-    transition-property: transform, -webkit-transform;
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 1200px) {
   .modal {
+    width: 100%;
     max-width: 528px;
-    height: 581px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .backdrop.backdrop__hidden .modal {
-    opacity: 0;
-  }
-}
-@media screen and (min-width: 768px) {
-  .backdrop.backdrop__hidden .modal {
-    -webkit-transform: translate(-50%, -50%) scale(0);
-            transform: translate(-50%, -50%) scale(0);
+    min-height: 581px;
   }
 }
 
 .button__close {
   position: absolute;
-  top: 101px;
-  right: 23px;
+  top: 8px;
+  right: 8px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -783,7 +759,10 @@ img {
           align-items: center;
   width: 30px;
   height: 30px;
-  margin: 0;
+  margin-left: auto;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -794,12 +773,6 @@ img {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (min-width: 768px) {
-  .button__close {
-    top: 8px;
-    right: 8px;
-  }
 }
 .button__close:hover, .button__close:focus {
   fill: #2196f3;
@@ -955,7 +928,7 @@ img {
 }
 
 .group__label--checkbox {
-  width: 370px;
+  max-width: 370px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1023,7 +996,7 @@ img {
   line-height: 1.16;
   letter-spacing: 0.03em;
   color: #212121;
-  text-align: start;
+  text-align: center;
 }
 @media screen and (min-width: 1200px) {
   .checkbox__title {
