--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -175,7 +175,7 @@
   align-items: center;
   margin: 0;
   @media screen and (min-width: 1200px) {
-    width: 425px;
+    max-width: 425px;
   }
 }
 
